<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.aiyaz.calculatormvvm.ViewModelMain" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/edittext_calc"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:hint="@string/calc"
            android:inputType="numberDecimal"
            android:text="@{viewModel.totalValue}"
            android:textDirection="rtl"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview_c"
            style="@style/textViewOperationStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/text_c"
            android:onClick="@{() -> viewModel.clearCalcStr()}"
            app:layout_constraintBottom_toTopOf="@+id/textview_7"
            app:layout_constraintEnd_toStartOf="@+id/textview_percentage"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edittext_calc" />

        <TextView
            android:id="@+id/textview_percentage"
            style="@style/textViewOperationStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/tex_percent"
            app:layout_constraintBottom_toBottomOf="@+id/textview_c"
            app:layout_constraintEnd_toStartOf="@+id/textview_clear"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textview_c"
            app:layout_constraintTop_toTopOf="@+id/textview_c" />

        <TextView
            android:id="@+id/textview_clear"
            style="@style/textViewOperationStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/text_clear"
            app:layout_constraintBottom_toBottomOf="@+id/textview_c"
            app:layout_constraintEnd_toStartOf="@+id/textview_divide"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textview_percentage"
            app:layout_constraintTop_toTopOf="@+id/textview_c" />

        <TextView
            android:id="@+id/textview_divide"
            style="@style/textViewOperationStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/text_divide"
            app:layout_constraintBottom_toBottomOf="@+id/textview_c"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textview_clear"
            app:layout_constraintTop_toTopOf="@+id/textview_c" />


        <TextView
            android:id="@+id/textview_7"
            style="@style/textViewStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/text_seven"
            android:onClick="@{() -> viewModel.setCalcStr(`7`)}"
            app:layout_constraintBottom_toTopOf="@+id/textview_4"
            app:layout_constraintEnd_toStartOf="@+id/textview_8"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_c" />

        <TextView
            android:id="@+id/textview_8"
            style="@style/textViewStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/text_eight"
            android:onClick="@{() -> viewModel.setCalcStr(`8`)}"
            app:layout_constraintBottom_toBottomOf="@+id/textview_7"
            app:layout_constraintEnd_toStartOf="@+id/textview_9"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textview_7"
            app:layout_constraintTop_toTopOf="@+id/textview_7" />

        <TextView
            android:id="@+id/textview_9"
            style="@style/textViewStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/text_nine"
            android:onClick="@{() -> viewModel.setCalcStr(`9`)}"
            app:layout_constraintBottom_toBottomOf="@+id/textview_7"
            app:layout_constraintEnd_toStartOf="@+id/textview_multiply"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textview_8"
            app:layout_constraintTop_toTopOf="@+id/textview_7" />

        <TextView
            android:id="@+id/textview_multiply"
            style="@style/textViewOperationStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/text_multiply"
            app:layout_constraintBottom_toBottomOf="@+id/textview_7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textview_9"
            app:layout_constraintTop_toTopOf="@+id/textview_7" />


        <TextView
            android:id="@+id/textview_4"
            style="@style/textViewStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/text_four"
            android:onClick="@{() -> viewModel.setCalcStr(`4`)}"
            app:layout_constraintBottom_toTopOf="@+id/textview_1"
            app:layout_constraintEnd_toStartOf="@+id/textview_5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_7" />

        <TextView
            android:id="@+id/textview_5"
            style="@style/textViewStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/text_fice"
            android:onClick="@{() -> viewModel.setCalcStr(`5`)}"
            app:layout_constraintBottom_toTopOf="@+id/textview_1"
            app:layout_constraintEnd_toStartOf="@+id/textview_6"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textview_4"
            app:layout_constraintTop_toBottomOf="@+id/textview_7" />

        <TextView
            android:id="@+id/textview_6"
            style="@style/textViewStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/text_six"
            android:onClick="@{() -> viewModel.setCalcStr(`6`)}"
            app:layout_constraintBottom_toTopOf="@+id/textview_1"
            app:layout_constraintEnd_toStartOf="@+id/textview_minus"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textview_5"
            app:layout_constraintTop_toBottomOf="@+id/textview_7" />

        <TextView
            android:id="@+id/textview_minus"
            style="@style/textViewOperationStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/text_minus"
            app:layout_constraintBottom_toTopOf="@+id/textview_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textview_6"
            app:layout_constraintTop_toBottomOf="@+id/textview_7" />


        <TextView
            android:id="@+id/textview_1"
            style="@style/textViewStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/text_one"
            android:onClick="@{() -> viewModel.setCalcStr(`1`)}"
            app:layout_constraintBottom_toTopOf="@+id/textview_00"
            app:layout_constraintEnd_toStartOf="@+id/textview_2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_4" />

        <TextView
            android:id="@+id/textview_2"
            style="@style/textViewStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/text_two"
            android:onClick="@{() -> viewModel.setCalcStr(`2`)}"
            app:layout_constraintBottom_toTopOf="@+id/textview_00"
            app:layout_constraintEnd_toStartOf="@+id/textview_3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textview_1"
            app:layout_constraintTop_toBottomOf="@+id/textview_4" />

        <TextView
            android:id="@+id/textview_3"
            style="@style/textViewStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/text_three"
            android:onClick="@{() -> viewModel.setCalcStr(`3`)}"
            app:layout_constraintBottom_toTopOf="@+id/textview_00"
            app:layout_constraintEnd_toStartOf="@+id/textview_plus"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textview_2"
            app:layout_constraintTop_toBottomOf="@+id/textview_4" />

        <TextView
            android:id="@+id/textview_plus"
            style="@style/textViewOperationStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/text_plus"
            app:layout_constraintBottom_toTopOf="@+id/textview_00"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textview_3"
            app:layout_constraintTop_toBottomOf="@+id/textview_4" />

        <TextView
            android:id="@+id/textview_00"
            style="@style/textViewStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/text_double_zero"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textview_0"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_1" />

        <TextView
            android:id="@+id/textview_0"
            style="@style/textViewStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="@{() -> viewModel.setCalcStr(`0`)}"
            android:text="@string/text_zero"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textview_dot"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textview_00"
            app:layout_constraintTop_toBottomOf="@+id/textview_1" />

        <TextView
            android:id="@+id/textview_dot"
            style="@style/textViewStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/text_dot"
            android:onClick="@{() -> viewModel.setCalcStr(`.`)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textview_equal"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textview_0"
            app:layout_constraintTop_toBottomOf="@+id/textview_1" />

        <TextView
            android:id="@+id/textview_equal"
            style="@style/textViewOperationStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/text_equal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textview_dot"
            app:layout_constraintTop_toBottomOf="@+id/textview_1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>


